Add method to get delegatee validation rewards
