# docs/swagger.yaml
@@ -259,6 +259,42 @@ definitions:
         - TerminateContract
         type: string
     type: object
+  DelegateeReward:
+    properties:
+      delegatorAddress:
+        type: string
+      rewards:
+        items:
+          $ref: '#/definitions/DelegationReward'
+        type: array
+    type: object
+  DelegateeTotalRewards:
+    properties:
+      address:
+        type: string
+      delegators:
+        type: integer
+      rewards:
+        items:
+          $ref: '#/definitions/DelegationReward'
+        type: array
+    type: object
+  DelegationReward:
+    properties:
+      balance:
+        type: string
+      type:
+        enum:
+        - Validation
+        - Flips
+        - Invitations
+        - Invitations2
+        - Invitations3
+        - SavedInvite
+        - SavedInviteWin
+        - Reports
+        type: string
+    type: object
   Delegator:
     properties:
       address:
@@ -1847,6 +1883,51 @@ paths:
           description: Service unavailable
       tags:
       - Epochs
+  /Epoch/{epoch}/Address/{address}/DelegateeRewards:
+    get:
+      operationId: EpochAddressDelegateeRewards
+      parameters:
+      - description: epoch
+        in: path
+        name: epoch
+        required: true
+        type: integer
+      - description: address
+        in: path
+        name: address
+        required: true
+        type: string
+      - description: items to take
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: continuation token to get next page items
+        in: query
+        name: continuationToken
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/Response'
+            - properties:
+                result:
+                  items:
+                    $ref: '#/definitions/DelegateeReward'
+                  type: array
+              type: object
+        "400":
+          description: Bad request
+        "429":
+          description: Request number limit exceeded
+        "500":
+          description: Internal server error
+        "503":
+          description: Service unavailable
+      tags:
+      - Identity
   /Epoch/{epoch}/Authors/Bad:
     get:
       operationId: EpochBadAuthors
@@ -2003,6 +2084,46 @@ paths:
             - properties:
                 result:
                   $ref: '#/definitions/Coins'
+              type: object
+        "400":
+          description: Bad request
+        "429":
+          description: Request number limit exceeded
+        "500":
+          description: Internal server error
+        "503":
+          description: Service unavailable
+      tags:
+      - Epochs
+  /Epoch/{epoch}/DelegateeTotalRewards:
+    get:
+      operationId: EpochDelegateeTotalRewards
+      parameters:
+      - description: epoch
+        in: path
+        name: epoch
+        required: true
+        type: integer
+      - description: items to take
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: continuation token to get next page items
+        in: query
+        name: continuationToken
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/ResponsePage'
+            - properties:
+                result:
+                  items:
+                    $ref: '#/definitions/DelegateeTotalRewards'
+                  type: array
               type: object
         "400":
           description: Bad request
